cabal-version: 2.4

author: monadosquito
description: Make views using Bem class custom decorations.
extra-source-files: CHANGELOG.md
license-file: LICENSE
license: MIT
maintainer: monadosquito@gmail.com
name: miso-bem
synopsis: adapt bem for miso
version: 1.0.0

library
    build-depends: base, bem, miso, mtl
    default-language: Haskell2010
    exposed-modules:
        Bem.Miso.Miso
        , Bem.Miso.View.Html
        , Bem.Miso.View.Mk.Mk
        , Bem.Miso.View.View
        , Bem.Miso.Utl.Utl
        , Bem.Miso.View.Mk.Cfg
    hs-source-dirs: src
    other-extensions: GADTs, RankNTypes, LambdaCase, RecordWildCards
